# searchengine

./: .gitignore  Index2.java  Index3.java  Index4.java  Index5.java  README.md  Tester.java  makefile
Guide-searchengine/: ProjectAgreementTemplateSearchEngine.docx
LaTeX/: bibliography.bib  main.tex
rustsearch/: Cargo.toml  Makefile  articlelist_length.csv  output.txt  trie_counting.csv  trie_counting1.csv
rustsearch/Plotting/: Articlelistlength.py  BCGS.py  BasicPart.py  PlotTimeComplex.py  SearchTimes.py
rustsearch/Plotting/BCGScounting/: BCa_few_months_earlier_to.csv  BCleft_her_husband_upon_reuniting.csv  BCstate_enterprises_will_be_privatized.csv  BCtwo_wood_boxes_joined_together.csv  BCwith_practical_experience_of_dissection.csv  GSa_few_months_earlier_to.csv  GSleft_her_husband_upon_reuniting.csv  GSstate_enterprises_will_be_privatized.csv  GStwo_wood_boxes_joined_together.csv  GSwith_practical_experience_of_dissection.csv
rustsearch/benches/: my_benchmark.rs
rustsearch/data/: test.txt
rustsearch/data/individual_articles/: 00000000.txt
rustsearch/src/: guessinggame.rs  helpers.rs  index.rs  lib.rs  main.rs  parsing.rs  space_analysis.rs
rustsearch/src/index/: boolean_tests.rs  gen_query.rs  index10_0.rs  index10_1.rs  index10_2.rs  index11_0.rs  index11_1.rs  index6.rs  index7.rs  index8.rs  index8_0.rs  index8_1.rs  index8_2.rs  index8_3.rs  index8_4.rs  index9.rs  index9_0.rs  index9_1.rs
rustsearch/src/space_analysis/: ArticlelistLength.rs  BCGS_shift_count.rs  articlelist_length.rs  bcgs_shift_count.rs  trie_counting.rs
(+57 files in other folders)
