[package]
name = "rustsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.8.5"

# [profile.release]
# lto = true # link-time optimizations (noget med at filer compileres bedre sammen)

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false


